fixes alignment problem with 1st h3

--- a/sass/_claudio-custom.scss
+++ b/sass/_claudio-custom.scss
@@ -74,7 +74,7 @@ $od-blue-05: rgba(22,74,122,.05);
             font-size: 1.1rem;
             font-weight: 300;
         }
-        
+
         > *:not(:first-child) {display: none;}
         > *:only-of-type + .e-read-more { display: none; }
 
@@ -93,6 +93,9 @@ $od-blue-05: rgba(22,74,122,.05);
             font-weight: bold;
             color: $od-blue;
             margin-top: 30px;
+            &:first-child {
+                margin-top: 0;
+            }
         }
 
         h5 {
